# genai_cohort_6

./: .gitignore  README.md
MiroFish/: ISSUE_LOG  README-ZH.md  (+2 more)
data_engineering_demo/: .gitignore  ISSUE_LOG  docker-compose.yml  env.example  pyproject.toml  requirements.txt
data_engineering_demo/de_demo/: __init__.py  __main__.py  config.py  main.py
data_engineering_demo/de_demo/dq/: __init__.py  checks.py
data_engineering_demo/de_demo/governance/: __init__.py  pii.py
data_engineering_demo/de_demo/ingest/: __init__.py  sqlite_ingest.py
data_engineering_demo/de_demo/pipeline/: orchestrator.py
data_engineering_demo/de_demo/reports/: __init__.py  builder.py
data_engineering_demo/de_demo/seed/: sqlite_seed.py
data_engineering_demo/de_demo/warehouse/: __init__.py  postgres_sink.py  schema.py
data_engineering_demo/de_demo/zones/: __init__.py  bronze.py  gold.py  silver.py
data_engineering_demo/postgres/: bootstrap_local_roles.sql  init-warehouse.sql
data_engineering_demo/tests/: test_bootstrap_instructions.py  test_cli_warehouse_errors.py  test_compose_defaults.py  test_dq.py  test_integration_seed.py  test_orchestrator_warehouse.py  test_pii.py  test_warehouse.py  test_warehouse_schema.py  test_zones.py
sdlc_with_llm/backend/: pyproject.toml
sdlc_with_llm/backend/data/: sample_metrics.json
sdlc_with_llm/backend/src/app/: __init__.py  main.py
sdlc_with_llm/backend/src/app/application/: metrics_evaluation.py
sdlc_with_llm/backend/tests/integration/: test_metrics_api.py
sdlc_with_llm/backend/tests/unit/: test_recommendation_engine.py
(+138 files in other folders)
