[project]
name = "financial-copilot-backend"
version = "0.1.0"
description = "Minimal Financial Analysis Copilot API (sdlc_with_llm)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
